Correct the initial value of CSS independent transform properties

According to the spec[1], the initial value of translate, scale, and rotate
should be 'none', which doesn't force stacking context unlike identity matrix.
This CL also make sure the constructor always initialize these properties to
initial value.

[1] https://drafts.csswg.org/css-transforms-2/#individual-transforms

BUG=659434

Review-Url: https://codereview.chromium.org/2454543002
Cr-Commit-Position: refs/heads/master@{#427941}

Former-commit-id: a022d98375b213ad9f497f220d0b64d6ed77cbc9